Changelog
=========

1.0.2 - unreleased
------------------

- Update license to GPL version 2 only.
  [hannosch]

1.0.1 - 2010-07-07
------------------

- Removed remaining references to empty ``sunburst_js`` folder.
  [hannosch]

1.0 - 2010-07-07
----------------

- Removed IE9.js from Sunburst for now.
  [spliter]

- Cleaned up the Dashboard CSS. This fixes
  http://dev.plone.org/plone/ticket/10516.
  [limi]

- Adding max-width for the language selector, so it works even with
  a ridiculous amount of languages.
  This fixes http://dev.plone.org/plone/ticket/10452.
  [limi]

- Improved default rendering for Python code listings when using the
  syntax coloring, and improved the overall typography for code.
  This fixes http://dev.plone.org/plone/ticket/10692.
  [limi]

- Adding eventDetails styling and vertical table styles, this fixes
  http://dev.plone.org/plone/ticket/10540.
  [limi]

- Lining up the edges of the main layout elements, this fixes
  http://dev.plone.org/plone/ticket/10465.
  [limi]

- Increased space between icons in the sprite to 200px to make collisions
  unlikely. This fixes http://dev.plone.org/plone/ticket/10633.
  [limi]

- Only add content type icons when they are enabled.
  Fixes http://dev.plone.org/plone/ticket/10541
  [davisagli]

- Remove the sprited icons for the file and image content types, to avoid
  double icons. Fixes http://dev.plone.org/plone/ticket/10501.
  [davisagli]

- Improved printing: hide some UI, better document and listing views
  [tdesvenain]

- Restore some of the headline/description styling that was lost when
  Denys' branch was merged.
  [limi]

- Adding a border to the dialog boxes, so it doesn't appear borderless on
  browsers that don't support box-shadow, like Internet Explorer.
  Fixes http://dev.plone.org/plone/ticket/10630.
  [limi]

1.0b7 - 2010-05-31
------------------

- Improved typography and vertical rhythm of the theme to improve UX.
  [spliter]
