@@ -484,6 +484,10 @@ dl.portlet a:hover {
 #content a:target {
 	background-color: #ffb;
 }
+#content span.link-external a {
+    background: transparent url(link_icon.png) 0px 1px no-repeat;
+    padding: 1px 0px 1px 16px;
+}
 
 #category {
 	font-size: 75%;
@@ -1531,6 +1535,22 @@ textarea#form\.description {
 table.listing tbody tr.odd.selected td,
 tr.selected {
     background-color: #ffa;
+}
+
+/* widget on @@member-registration */
+.ordered-selection-field {
+    margin-top: 1em;
+}
+
+.ordered-selection-field select {
+    padding-left: 5px;
+    height: 200px;
+    width: 200px;
+}
+
+.ordered-selection-field button {
+    font-size: 100%;
+    margin: 0 10px 10px;
 }
 
 /* @group Login form */
